- Fix the problem that doesn't show images of the cards - Prevent horizontal scrolling on iOS devices.

--- a/src/components/views/MainMenu.css
+++ b/src/components/views/MainMenu.css
@@ -1,7 +1,7 @@
 .main-nav {
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: -100%;
     background-color: var(--bg-main-nav);
